--- a/CSS/main.css
+++ b/CSS/main.css
@@ -314,7 +314,7 @@ footer {
     padding: 2rem;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
   .about-us {
     display: flex;
     flex-direction: column;
@@ -326,6 +326,18 @@ footer {
     flex-direction: column;
     padding-inline: 2rem;
     padding-top: 3rem;
+  }
+  .map-container {
+    width: 100%;
+    /* Ancho del contenedor del mapa al 100% */
+    padding: 10px;
+    /* Agregar espaciado si es necesario */
+  }
+  .mapa {
+    width: 100%;
+    /* Ancho del mapa al 100% */
+    height: auto;
+    /* Altura automática para mantener la proporción */
   }
 }
 @media screen and (max-width: 480px) {
