--- a/CSS/Partials/_header.scss
+++ b/CSS/Partials/_header.scss
@@ -7,7 +7,7 @@
 
 .bg-custom-color {
     list-style-type: none;
-    background-color: rgba(136, 5, 146, 0.942);
+    background-color: $secondaryColor;
     padding: 1;
 }
 
