--- a/CSS/Partials/_variables.scss
+++ b/CSS/Partials/_variables.scss
@@ -1,1 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;600&display=swap');
+
+$mainColor: rgba(210, 161, 255, 0.651);
+$secondaryColor: rgba(136, 5, 146, 0.942);
+$bodyColor: rgba(222, 180, 225, 0.325);
