--- a/CSS/main.css
+++ b/CSS/main.css
@@ -5,19 +5,16 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-body {
+* body {
   background-color: rgba(222, 180, 225, 0.325);
 }
-
-::-moz-selection {
+*::-moz-selection {
   background-color: rgba(0, 0, 0, 0.241);
-  color: rgba(136, 5, 146, 0.942);
+  color: rgba(210, 161, 255, 0.651);
 }
-
-::selection {
+*::selection {
   background-color: rgba(0, 0, 0, 0.241);
-  color: rgba(136, 5, 146, 0.942);
+  color: rgba(210, 161, 255, 0.651);
 }
 
 .logo-home {
@@ -93,16 +90,13 @@ body {
   display: flex;
   gap: 1rem;
 }
-
-.tarjeta {
+.tarjetas .tarjeta {
   flex: 1;
 }
-
-.img {
+.tarjetas .tarjeta .img {
   width: 100%;
 }
-
-.personas {
+.tarjetas .personas {
   text-align: center;
 }
 
@@ -116,15 +110,14 @@ body {
 
 .grid {
   box-sizing: border-box;
-  background-color: rgba(222, 180, 225, 0.326);
+  background-color: rgba(222, 180, 225, 0.325);
   min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-template-areas: "título título clients1 cloud" "título título security AI";
 }
-
-.título {
+.grid .título {
   padding: 15rem;
   color: hsl(0, 0%, 100%);
   font-family: "Raleway", sans-serif;
@@ -227,8 +220,7 @@ body {
   gap: 7rem;
   align-items: center;
 }
-
-.carousel-inner {
+.clients .carousel-inner {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -329,15 +321,11 @@ footer {
   }
   .map-container {
     width: 100%;
-    /* Ancho del contenedor del mapa al 100% */
     padding: 10px;
-    /* Agregar espaciado si es necesario */
   }
   .mapa {
     width: 100%;
-    /* Ancho del mapa al 100% */
     height: auto;
-    /* Altura automática para mantener la proporción */
   }
 }
 @media screen and (max-width: 480px) {
@@ -346,22 +334,11 @@ footer {
     padding-top: 3rem;
     font-size: 2.5rem;
   }
-  .grid {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-  }
-  .título {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    padding: 2rem;
-  }
   .nav-color-white {
     color: white;
     font-weight: small;
     font-family: "Raleway", sans-serif;
-    font: 1rem;
+    font: 0.5rem;
     text-decoration: none;
   }
   .navbar-nav {
