--- a/CSS/main.css
+++ b/CSS/main.css
@@ -117,7 +117,8 @@
   grid-template-rows: 1fr 1fr;
   grid-template-areas: "título título clients1 cloud" "título título security AI";
 }
-.grid .título {
+
+.título {
   padding: 15rem;
   color: hsl(0, 0%, 100%);
   font-family: "Raleway", sans-serif;
@@ -352,5 +353,16 @@ footer {
     align-items: center;
     align-content: center;
     gap: 0.5rem;
+  }
+  .grid {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+  }
+  .título {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    padding: 2rem;
   }
 }/*# sourceMappingURL=main.css.map */
